# end-of-outbreak-vbd

./: .gitignore  README.md  Snakefile  correlations.ipynb  inference_test.ipynb  lazio_2017.ipynb  pyproject.toml  sim_study.ipynb  weather_data.ipynb  weather_model.ipynb
data/: lazio_chik_2017.csv  lazio_chik_2017_Rt.csv  lazio_chik_2017_reporting_matrix.csv  mordecai_suitability_grid.csv  tegar_suitability_grid.csv
endoutbreakvbd/: __init__.py  _inference_core.py  _inference_models.py  _inference_qrt.py  _types.py  additional_case_prob.py  chikungunya.py  eop.py  further_case_risk.py  inference.py  inputs.py  model.py  rep_no_models.py  rome_2017_weather.csv  types.py  underreporting.py  utils.py
endoutbreakvbd/tests/: test_further_case_risk.py  test_inference.py  test_inputs.py  test_model.py  test_public_api.py  test_utils.py
notebooks/: correlations.ipynb  inference_test.ipynb  lazio_2017.ipynb  sim_study.ipynb  weather_data.ipynb
results/: rome_weather_suitability_2017.csv  weather_suitability_data_2017.csv  weather_suitability_data_all.csv
results/inference_test/: autoregressive.csv  autoregressive_diagnostics.csv  outbreak_data.csv  suitability.csv  suitability_diagnostics.csv
results/inference_test_qrt/: autoregressive.csv  autoregressive_diagnostics.csv  outbreak_data.csv  suitability.csv  suitability_diagnostics.csv
results/lazio_epiestim/: epiestim.csv
results/lazio_frozen/: autoregressive_frozen.csv
results/lazio_outbreak/: autoregressive.csv  autoregressive_diagnostics.csv  suitability.csv  suitability_diagnostics.csv
results/lazio_outbreak_qrt/: autoregressive.csv  autoregressive_diagnostics.csv  suitability.csv  suitability_diagnostics.csv
results/lazio_underreporting_qrt/: autoregressive_p60.csv  autoregressive_p60_diagnostics.csv  delay.csv  suitability_p60.csv  suitability_p60_diagnostics.csv  trajectory.csv
results/lazio_underreporting_retro/: autoregressive_p60.csv  autoregressive_p60_diagnostics.csv  suitability_p60.csv  suitability_p60_diagnostics.csv  trajectory.csv
results/schematic/: outbreak.csv
results/sim_sensitivity/: decay_speed_high.csv  decay_speed_low.csv  rep_no_factor_high.csv  rep_no_factor_low.csv
results/sim_study/: example_outbreak_decision.csv  example_outbreak_declaration.csv  example_outbreak_eop.csv  example_outbreak_prob.csv  example_outbreak_risk.csv  many_outbreak.csv  many_outbreak_decision.csv  many_outbreak_declaration.csv  many_outbreak_example.csv
results/sim_underreporting/: diagnostics.csv  sim.csv
results/sim_underreporting_nowcast/: diagnostics.csv  probs.csv  trajectory.csv
results/weather_suitability_data/: 2017.csv  all.csv
scripts/: compile_figures.py  example_results.py  inference_test.py  inference_test_plots.py  inputs.py  lazio_epiestim.py  lazio_epiestim_plots.py  lazio_frozen.py  lazio_frozen_plots.py  lazio_outbreak.py  lazio_outbreak_plots.py  lazio_underreporting_qrt.py  lazio_underreporting_qrt_plots.py  lazio_underreporting_retro.py  lazio_underreporting_retro_plots.py  schematic.py  schematic_plots.py  sim_sensitivity.py  sim_sensitivity_plots.py  sim_study.py  sim_study_plots.py  sim_underreporting.py  sim_underreporting_nowcast.py  sim_underreporting_nowcast_plots.py  sim_underreporting_plots.py  weather_suitability_data.py  weather_suitability_data_plots.py
tests/: conftest.py  test_additional_case_prob.py  test_further_case_risk.py  test_inference.py  test_inference_qrt.py  test_inputs.py  test_model.py  test_public_api.py  test_underreporting.py  test_utils.py
