[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "endoutbreakvbd"
requires-python = ">=3.11"
version = "0.0.0"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
annotated-types = "*"
arviz-base = "*"
arviz-stats = "*"
climepi = "*"
joblib = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
pymc = "*"
scipy = "*"
svgutils = "*"
seaborn = "*"
statsmodels = "*"
tqdm = "*"
xarray = "*"

[tool.pixi.pypi-dependencies]
endoutbreakvbd = { path = ".", editable = true }
meteostat = "*"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
ipykernel = "*"
jupyter_bokeh = "*"
pytest = "*"
snakemake = "*"
snakemake-executor-plugin-slurm = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "prod" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"

[tool.hatch.build.targets.sdist]
include = ["endoutbreakvbd/**"]

[tool.hatch.build.targets.wheel]
include = ["endoutbreakvbd/**"]
