[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "endoutbreakvbd"
requires-python = ">=3.11"
version = "0.0.0"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
annotated-types = ">=0.7.0,<0.8"
arviz-base = ">=1.1.0,<2"
arviz-stats = ">=1.1.0,<2"
climepi = ">=0.6.6,<0.7"
joblib = ">=1.5.3,<2"
matplotlib = ">=3.10.9,<4"
numpy = ">=2.4.4,<3"
nutpie = ">=0.16.8,<0.17"
pandas = ">=2.3.3,<3"
pymc = ">=5.28.5,<6"
scipy = ">=1.17.1,<2"
svgutils = ">=0.3.4,<0.4"
seaborn = ">=0.13.2,<0.14"
statsmodels = ">=0.14.6,<0.15"
tqdm = ">=4.67.3,<5"
xarray = ">=2026.4.0,<2027"

[tool.pixi.pypi-dependencies]
endoutbreakvbd = { path = ".", editable = true }
meteostat = ">=1.7.6, <2"

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.15.12,<0.16"
ipykernel = ">=7.2.0,<8"
jupyter_bokeh = ">=4.0.5,<5"
pandas-stubs = ">=3.0.0.260204,<4"
pytest = ">=9.0.3,<10"
snakemake = ">=9.20.0,<10"
snakemake-executor-plugin-slurm = ">=2.6.1,<3"
ty = ">=0.0.35,<0.0.36"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "prod" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
typecheck = "ty check"
figures = "snakemake --cores 4 --allowed-rules schematic_plots schematic_results weather_suitability_data_plots sim_study_plots lazio_outbreak_plots inference_test_plots paper_figures"
figures_png = "snakemake --cores 4 paper_figures_png --allowed-rules paper_figures_png"

[tool.hatch.build.targets.sdist]
include = ["endoutbreakvbd/**"]

[tool.hatch.build.targets.wheel]
include = ["endoutbreakvbd/**"]
