[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "endoutbreakvbd"
requires-python = ">=3.11"
version = "0.0.0"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
annotated-types = "*"
arviz-base = ">=1"
arviz-stats = ">=1"
climepi = ">=0.6.6"
joblib = "*"
matplotlib = "*"
numpy = "*"
nutpie = "*"
pandas = "*"
pymc = "*"
rpy2 = "*"
scipy = "*"
svgutils = "*"
seaborn = "*"
statsmodels = "*"
tqdm = "*"
xarray = "*"

[tool.pixi.pypi-dependencies]
endoutbreakvbd = { path = ".", editable = true }
meteostat = "*"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
ipykernel = "*"
jupyter_bokeh = "*"
pandas-stubs = "*"
pytest = "*"
snakemake = "*"
snakemake-executor-plugin-slurm = "*"
ty = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "prod" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
typecheck = "ty check"
figures = "snakemake --cores 4 --allowed-rules schematic_plots weather_suitability_data_plots sim_study_plots lazio_outbreak_plots inference_test_plots sim_sensitivity_plots lazio_frozen_plots lazio_epiestim_plots paper_figures"
figures_png = "snakemake --cores 4 paper_figures_png --allowed-rules paper_figures_png"

[tool.hatch.build.targets.sdist]
include = ["endoutbreakvbd/**"]

[tool.hatch.build.targets.wheel]
include = ["endoutbreakvbd/**"]
